terraform/main.tf
resource "aws_ecr_repository" "web_APP" {                     # THE ECR
  name                 = var.aws_ecr_repository
  image_tag_mutability = "MUTABLE"

  image_scanning_configuration {
    scan_on_push = true
  }
}

resource "aws_ecs_cluster" "APP_CLUSTER" {                    # THE ECS CLUSTER
  name = var.aws_ecs_cluster

  setting {
    name  = "containerInsights"
    value = "enabled"
  }
}

resource "aws_ecs_task_definition" "frontend_task" {
  family                   = "frontend-task"
  requires_compatibilities = ["FARGATE"]
  network_mode             = "awsvpc"
  cpu                      = "256"
  memory                   = "512"
  execution_role_arn       = aws_iam_role.ecs_task_execution_role.arn

  container_definitions = jsonencode([
    {
      name  = "frontend"
      image = "${var.aws_ecr_repository}:latest"

      portMappings = [{
        containerPort = 80
      }]

      essential = true
    }
  ])
}


resource "aws_ecs_task_definition" "backend_task" {
  family                   = "frontend-task"
  requires_compatibilities = ["FARGATE"]
  network_mode             = "awsvpc"
  cpu                      = "256"
  memory                   = "512"
  execution_role_arn       = aws_iam_role.ecs_task_execution_role.arn

  container_definitions = jsonencode([
    {
      name  = "backend"
      image = "${var.aws_ecr_repository}:latest"

      portMappings = [{
        containerPort = 80
      }]

      essential = true
    }
  ])
}



# THE ECS SERVICE 

resource "aws_ecs_service" "mul-backend-service-app" {   
  name            = var.app_service_backend
  cluster         = aws_ecs_cluster.APP_CLUSTER.id
  task_definition = aws_ecs_task_definition.backend_task.arn
  desired_count   = 1
  launch_type     = "FARGATE"

  network_configuration {
    subnets         = data.aws_subnets.default.ids
    security_groups = [aws_security_group.ecs_sg.id]
    assign_public_ip = true
  }
}


resource "aws_ecs_service" "mui-frontend-service-app" {   
  name            = var.app_service_frontend
  cluster         = aws_ecs_cluster.APP_CLUSTER.id
  task_definition = aws_ecs_task_definition.frontend_task.arn
  desired_count   = 1
  launch_type     = "FARGATE"

  network_configuration {
    subnets         = data.aws_subnets.default.ids
    security_groups = [aws_security_group.ecs_sg.id]
    assign_public_ip = true
  }
}

# THE IAM ROLE FOR ECS TAS  K EXECUTION

resource "aws_iam_role" "ecs_task_execution_role" {
  name = "ecsTaskExecutionRole"


  assume_role_policy = jsonencode({
    Version = "2012-10-17"
    Statement = [
    {
        Action = "sts:AssumeRole"
        Effect = "Allow"
        Sid    = ""
        Principal = {
            Service = "ecs-tasks.amazonaws.com"
        }
    },
    ]
  })

  tags = {
    tag-key = "tag-value"
  }
}

resource "aws_iam_role_policy_attachment" "ecs_task_execution_role_policy_attachment" {
  role       = aws_iam_role.ecs_task_execution_role.name
  policy_arn = "arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy"
}
